<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rela"
        android:layout_width="wrap_content"
        android:layout_height="178dp">

        <com.asksira.loopingviewpager.LoopingViewPager
            android:id="@+id/lvp_news_slider"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:isInfinite="true"
            app:autoScroll="true"
            android:layout_margin="@dimen/margin_8"
            app:scrollInterval="5000"
            app:wrap_content="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/lvp_news_slider">

            <com.rd.PageIndicatorView
                android:id="@+id/pageIndicatorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/margin_10"
                app:piv_animationType="scale"
                app:piv_dynamicCount="true"
                app:piv_interactiveAnimation="true"
                app:piv_selectedColor="@color/bottomBarDefaultTextColor"
                app:piv_unselectedColor="@color/grey"
                app:piv_viewPager="@id/lvp_news_slider"
                attrs:piv_padding="12dp"
                attrs:piv_radius="10dp" />

        </RelativeLayout>

    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="@dimen/margin_2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@color/home_tiles_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="@string/medicine"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:layout_marginRight="@dimen/margin_16"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:textColor="@android:color/black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/home_medicine" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="@dimen/margin_2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@color/home_tiles_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="@string/non_medicine"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:layout_marginRight="@dimen/margin_16"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:textColor="@android:color/black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/home_non_medicine" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="@dimen/margin_2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@color/home_tiles_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="@string/newborn_essentials"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:layout_marginRight="@dimen/margin_16"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:textColor="@android:color/black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/home_new_born" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="@dimen/margin_2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@color/home_tiles_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="@string/toys"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:layout_marginRight="@dimen/margin_16"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:textColor="@android:color/black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/home_toys" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="@dimen/margin_2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@color/home_tiles_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="Opticals"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:layout_marginRight="@dimen/margin_16"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:textColor="@android:color/black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/home_opticals" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="@dimen/margin_2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@color/home_tiles_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="@string/book_your_doctor"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:layout_marginRight="@dimen/margin_16"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:textColor="@android:color/black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/home_book_doctor" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnUploadPres"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_20"
            app:srcCompat="@drawable/home_upload_prescription" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_50">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_margin="@dimen/margin_20"
                app:srcCompat="@drawable/home_get_medicine_steps" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:srcCompat="@drawable/home_video_call"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>