<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_logo_img"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/remedio"
        app:layout_constraintBottom_toTopOf="@+id/login_edit_text_ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/login_edit_text_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/login_goto_sign_up_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_logo_img">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_32"
            android:hint="@string/hint_enter_number"
            android:textColorHint="@color/hintTextColor">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_number_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edt_bg_selector"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/margin_16"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:paddingTop="@dimen/margin_10"
                android:paddingBottom="@dimen/margin_10"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_32"
            android:hint="@string/hint_enter_password"
            android:textColorHint="@color/hintTextColor"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_password_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edt_bg_selector"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/margin_16"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_forgot_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_32"
            android:gravity="end"
            android:text="@string/forgot_password" />

        <Button
            android:id="@+id/login_submit_btn"
            style="@style/UIButtonGrad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_48"
            android:layout_marginTop="@dimen/margin_48"
            android:layout_marginEnd="@dimen/margin_48"
            android:layout_marginBottom="@dimen/margin_8"
            android:text="@string/login"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_goto_sign_up_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="Not a member? Sign up now"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_edit_text_ll" />

</androidx.constraintlayout.widget.ConstraintLayout>
    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:mask="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

        <ImageView
            android:id="@+id/logo"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/remedio"
            android:layout_width="wrap_content"
            android:layout_height="100dp" />

        <LinearLayout
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/hint_enter_number"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#cac9c9">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:imeOptions="actionDone"
                    android:drawablePadding="@dimen/margin_4"
                    android:drawableLeft="@drawable/ic_phone"
                    android:textSize="16sp"
                    android:background="@drawable/edt_bg_selector"
                    android:id="@+id/et_login_number" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/pass_lay"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#cac9c9">

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:drawablePadding="@dimen/margin_4"
                        android:visibility="visible"
                        android:background="@drawable/edt_bg_selector"
                        android:drawableLeft="@drawable/ic_password"
                        android:textSize="16sp"
                        android:imeOptions="actionDone"
                        android:hint="@string/hint_enter_password" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txtShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_4"
                    android:text="Show" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Forgot Password?"
                    android:gravity="right"
                    android:layout_marginRight="35dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/ib_login_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="log in"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                style="@style/UIButtonGrad" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@+id/line"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New user? "
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnRegister"
                style="@style/UITextButtonRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register here"
                android:textAllCaps="false" />

        </LinearLayout>


            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>-->